# wagenseller-ai-python-examples

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/ai/asr/whisperx/streaming/: transcribe.py
examples/ai/combos/conversational_ai/: conversational-ai-client.py  conversational-ai-server.py
examples/ai/llm/llama/: llama-benchmark.py
examples/ai/llm/llama/llama_stream/: LlamaStreamClient.py  knowledge_base_server.py
examples/ai/tts/kokoro/: kokoro-simple-server.py
examples/ai/tts/tts_client/: simple-client.py
examples/media/: record_sample.py
examples/tools/infinite_campus/: infinitecampus.py
scripts/ai/asr/whisperx/streaming/: transcribe.py  transcribe_client.py  transcribe_server.py
scripts/ai/combos/conversational_ai/: conversational-ai-client.py
scripts/ai/llm/llama/: llama-gpu-check.py
scripts/ai/llm/llama/llama_local_vector_db/: example_json_config.json  role_play.py
scripts/ai/llm/llama/llama_stream/: role_play_server.py
scripts/ai/llm/llama/local_knowledge_base/: local_knowledge_base.py
scripts/ai/tts/f5-tts/: f5-simple-server.py
scripts/ai/tts/kokoro/: kokoro-blend-voices.py  kokoro-make-voice.py  kokoro-simple-server.py
scripts/media/: capture_audio.py  extract_audio.py  record_sample.py  simple_noise_reduction.py
scripts/tools/infinite_campus/: infinitecampus.py
scripts/utils/: amadeo_encryption.py
src/amadeo_utils/: colored_text.py
src/amadeo_utils/ai/asr/: whisperx.py
src/amadeo_utils/ai/combined/conversational_ai/: conversational_ai.py
src/amadeo_utils/ai/llm/llama/: KnowledgeBaseStream.py  RolePlayStream.py  llama_utils.py  subjective_constants.py
src/amadeo_utils/ai/llm/llama/lora_generation/: ExampleScriptUsingTuner.py  LoraFineTuner.py
src/amadeo_utils/ai/llm/vector_database/: VectorDB.py
src/amadeo_utils/ai/tts/: f5.py  generic_utils.py  kokoro.py
src/amadeo_utils/client/: amadeo_client.py  simple_client.py
src/amadeo_utils/media_utils/: audio_capture.py  audio_devices.py  audio_utils.py
src/amadeo_utils/misc_utils/: FileEncryption.py
src/amadeo_utils/server/: amadeo_server.py  session_worker.py  simple_server.py
